revised unit test code & my sql db connection